--- a/src/01-playground/docker-compose.yml
+++ b/src/01-playground/docker-compose.yml
@@ -1,15 +1,14 @@
 version: '3.9'
 
 services:
-   mongodb:
-     image: mongo:5.0
-     ports:
-       - 27017:27017
-     environments:
-       - MONGO_INITDB_ROOT_USERNAME=root
-       - MONGO_INITDB_ROOT_PASSWORD=root123
-     volumes:
-       - ./mongo_data:/data/db
+  mongodb:
+    image: mongo:5.0
+    ports:
+      - 27017:27017
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=root
+      - MONGO_INITDB_ROOT_PASSWORD=root123
+    volumes:
+      - ./mongo_data:/data/db
 
 
- 
